Clean up AddAnimalCommandTest